[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notion-native-toolkit"
version = "0.1.0"
description = "Reusable native-feeling Notion toolkit for API, browser automation, and Markdown round-trips"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1",
  "mistletoe>=1.3,<2",
  "playwright>=1.52,<2",
]

[project.scripts]
notion-push = "notion_native_toolkit.cli:main"
notion-native = "notion_native_toolkit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
